name:                lens-inference
version:             4.1.2
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Maxwell Swadling
maintainer:          maxwellswadling@gmail.com
copyright:           Copyright (C) 2014 Maxwell Swadling
category:            Data, Lenses, Generics
build-type:          Simple
extra-source-files:  src
cabal-version:       >=1.10

library
  exposed-modules:     Control.Lens.Inference
  build-depends:       base >=4.7 && <4.8, lens == 4.1.2, template-haskell >=2.9 && <2.10
  hs-source-dirs:      src
  default-language:    Haskell2010

executable inu
  main-is:             Inu.hs
  hs-source-dirs:      examples
  build-depends:       base, lens, lens-inference
  default-language:    Haskell2010